# gc-c-jlox

./: .clang-tidy  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
gc-8.0.4/: CMakeLists.txt
source/: lib.c  lib.h  main.c
source/private/: assertions.h  environment.c  environment.h  interpreter.c  interpreter.h  list.c  list.h  object.c  object.h  parser.c  parser.h  runtime_error.c  runtime_error.h  scanner.c  scanner.h  strutils.c  strutils.h  token.c  token.h  token_type.c  token_type.h  token_type.inl
source/private/ast/: debug.c  debug.h  expr.c  expr.h  printer.c  printer.h  stmt.c  stmt.h  stmt_list.c  stmt_list.h
source/private/hash/: fnv.c  fnv.h  table.c  table.h
test/: CMakeLists.txt
test/source/: gc-c-jlox_test.c
